---------------------------------------------------------------

Changes in Go4 v4.4.1 (January 10)
1. Default implementation for TGo4Parameter methods are provided. 
   Now Clear(), PrintParameter() and UpdateFrom() methods has meaningful
   functionality and can be used as is in user derived classes.
   Thus, it is possible to declare user parameter class without any additional methods.

Changes in Go4 v4.4.0 (November 09)
1. Add clear histogram and conditions button in gui
2. System configuration tested once and stored in 
   $GO4SYS/build/Makefile.gener file. This simplifies compilation
   of user analysis and excludes misconfiguration.
3. Makefile logic improved to be able work with system-wide installed 
   ROOT version - ROOTSYS no longer required to be set. Instead root-config
   script should be always available via PATH variable. 
4. ROOT/Qt/Go4 library paths directly specified in all go4 executables 
   (go4, user analysis). This speeds up start time and allows to run 
   gui and analysis without any login scripts. To disable this compilation
   option, during compilation call "make rpath=false"       
5. Introduce standard go4analysis executable, which can be used to launch
   any user analysis, loading it from the user (typically libGo4UserAnalysis) library. 
   Minimum changes (if any) required to old user code.
   ExampleSimple, Example1Step, Example2Step adjusted to this scheme.  
6. Introduced go4-config utility, which provide possibility to use go4 without setting
   environment variables like GO4SYS or LD_LIBRARY_PATH. The only requirement is that
   go4-config should be accessible via PATH variable or should be placed in one of 
   the standard locations. Will be the main point to provide go4 install feature.
7. New install capability in makefile. One can compile complete go4 with 
   command "make prefix=/usr/local", where prefix variable defines installation directory.
   After compilation completed, "make install" command will copy binaries 