@@ -21,8 +21,8 @@
 // to check the user analysis against framework version on runtime
 // 10205 means Version 1.02.05 or release number  1.2-5,
 
-#define __GO4BUILDVERSION__ 40400
-#define __GO4RELEASE__ "v4.4.0"
+#define __GO4BUILDVERSION__ 40401
+#define __GO4RELEASE__ "v4.4.1"
 
 class TGo4Version {
    protected:
