@@ -414,7 +414,7 @@ GO4_USEREXENAME  = MainUserAnalysis
 
 #### Library version numbers: ###
 MAJOR         = 4
-MINOR         = 4.0
+MINOR         = 4.1
 VERSSUF       = $(MAJOR).$(MINOR)
 
 #### Go4 general build flags: ###
