@@ -25,6 +25,8 @@ Changes in Go4 v4.4.1 (January 10)
    Now Clear(), PrintParameter() and UpdateFrom() methods has meaningful
    functionality and can be used as is in user derived classes.
    Thus, it is possible to declare user parameter class without any additional methods.
+2. Add support of arbitrary objects in TGo4Picture::AddSpecialObject, 
+   show real picture size in the browser   
 
 Changes in Go4 v4.4.0 (November 09)
 1. Add clear histogram and conditions button in gui
